[gd_scene load_steps=4 format=2]

[ext_resource path="res://Pickup.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Pickup" type="Area2D" groups=[
"pickups",
]]
collision_layer = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FlashTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Pickup_area_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
